example/_rendered/fyr/repo/prod/full/service-full.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: repo
    app: full
    env: prod
    team: fyr
  name: full
  namespace: fyr-prod-repo
spec:
  ports:
    - name: http-full
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    service: repo
    app: full
    env: prod
    team: fyr
  type: ClusterIP
