example/_rendered/fyr/repo/prod/full/ciliumnetworkpolicy-inbound-full-prod.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: inbound-full-prod
  namespace: fyr-prod-repo
  labels:
    service: repo
    app: full
    env: prod
    team: fyr
spec:
  endpointSelector:
    matchLabels:
      service: repo
      app: full
      env: prod
  ingress:
    - fromEndpoints:
        - matchLabels:
            service: otherservice
            app: otherapp
            env: prod
            io.kubernetes.pod.namespace: fyr-prod-otherservice
      toPorts:
        - ports:
            - port: "3000"
