example/_rendered/fyr/repo/prod/full/ciliumnetworkpolicy-outbund-full-prod.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: outbund-full-prod
  namespace: fyr-prod-repo
  labels:
    service: repo
    app: full
    env: prod
    team: fyr
spec:
  egress:
    - toFQDNs:
        - matchName: api.example.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: '*.example.com'
      toPorts:
        - ports:
            - port: "443"
    - toEntities:
        - world
  endpointSelector:
    matchLabels:
      service: repo
      app: full
      env: prod
